--- a/config/database.yml.sample
+++ b/config/database.yml.sample
@@ -30,5 +30,5 @@ production:
   database: deadline_camp_production
   pool: 1
   timeout: 5000
-  username: postgres
-  password:
+  username: deadline_camp_production
+  password: mIKBzvbllRvwJObaSTkeg
