--- a/.travis.yml
+++ b/.travis.yml
@@ -1,11 +1,9 @@
 language: ruby
 before_script:
-  - ln -nfs ./config/database.yml.sample ./config/database.yml
+  - cp config/database.yml.sample config/database.yml
+  #- ln -nfs ./config/database.yml.sample ./config/database.yml
 rvm:
   - 1.9.3
   - 1.9.2
-  - ree
-  - jruby-18mode # JRuby in 1.8 mode
-  - jruby-19mode # JRuby in 1.9 mode
   - rbx-18mode
   - rbx-19mode
