--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,8 @@
 language: ruby
 before_script:
-  - cp config/database.yml.sample config/database.yml
-  #- ln -nfs ./config/database.yml.sample ./config/database.yml
+  - psql -c 'create database deadline_camp_test;' -U postgres
+  - ln -nfs config/database.yml.sample config/database.yml
+  #- cp config/database.yml.sample config/database.yml
 rvm:
   - 1.9.3
   - 1.9.2
